--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -45,7 +45,10 @@ jobs:
         run: tar -xvzf python/linux-python-386.tar.gz -C out/urbann-linux-x64/
           
       - name: Prepare Distributable
-        run: tar -cvzf out/urbann-linux-x64.tar.gz out/urbann-linux-x64/
+        run: |
+          cd out  
+          tar -cvzf urbann-linux-x64.tar.gz urbann-linux-x64
+          cd ..
 
       - name: Status Update
         run: |
@@ -70,11 +73,6 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
           asset_path: out/urbann-linux-x64.tar.gz
-          asset_name: urbann-linux-x64.zip
+          asset_name: urbann-linux-x64.tar.gz
           asset_content_type: application/gzip
-
-        
-
-
-
 
