--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -2,9 +2,12 @@ name: Linux-Build
 
 # Run this workflow every time a new commit pushed to your repository
 on: 
-  push:
-    tags:
-      - '*'
+  workflow_run:
+      workflows: ["Release-Source"]
+      branches: [main]
+      types: 
+        - completed
+        - requested
 
 jobs:
   # Set the job key. The key is displayed as the job name
@@ -53,17 +56,6 @@ jobs:
       - name: Status Update
         run: |
           ls out/
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: true
 
       - name: Upload Release Asset
         id: upload-release-asset 
