--- a/src/js/tsconfig.json
+++ b/src/js/tsconfig.json
@@ -3,7 +3,7 @@
       "noImplicitAny": true,
       "removeComments": true,
       "preserveConstEnums": true,
-      "outFile": "../build/script.js",
+      "outFile": "../run/script.js",
       "sourceMap": true,
       "target": "ES6",
       "allowJs": true
