Repairing build workflows

--- a/.github/workflows/matrix-build.yml
+++ b/.github/workflows/matrix-build.yml
@@ -36,13 +36,13 @@ jobs:
         include:
           - os: ubuntu-latest
             pythond: linux-python-386.tar.gz
-            outd: urbann-linux-x64
-            dist: urbann-linux-x64.tar.gz
+            outd: metacity-linux-x64
+            dist: metacity-linux-x64.tar.gz
             pythonpath: install/bin/python3.8
           - os: windows-latest
             pythond: windows-python-386.tar.gz
-            outd: urbann-win32-x64
-            dist: urbann-win32-x64.tar.gz
+            outd: metacity-win32-x64
+            dist: metacity-win32-x64.tar.gz
             pythonpath: install/python.exe
 
     steps:
