--- a/metacity/package.json
+++ b/metacity/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "urbann",
-  "productName": "urbann",
+  "name": "metacity",
+  "productName": "metacity",
   "version": "1.0.0",
   "description": "My Electron application description",
   "main": "src/index.js",
