--- a/.github/workflows/matrix-build.yml
+++ b/.github/workflows/matrix-build.yml
@@ -56,6 +56,7 @@ jobs:
 
       - name: Change Directories
         run: |
+          ls metacity/
           cd metacity
 
       - name: Install Dependencies and Build
