--- a/src/js/tsconfig.json
+++ b/src/js/tsconfig.json
@@ -22,6 +22,7 @@
       "gl/shadow.ts",
       "gl/object.ts",
       "gl/triangle.ts",
+      "validation.ts",
       "viewer.ts",
       "nodeeditor.ts",
       "application.ts",
